# internal/auth/controller.go
@@ -5,11 +5,31 @@ import (
 )
 
 type AuthController struct {
-	jwt []byte
+	jwt   []byte
+	users map[string]string
+}
+
+type AuthOKResponse struct {
+	Message string `json:"message"`
+	Token   string `json:"token"`
+}
+
+type AuthInternalServerErrorResponse struct {
+	Message string `json:"message"`
+}
+
+type AuthUnauthorizedResponse struct {
+	Message string `json:"message"`
+}
+
+var users = map[string]string{
+	"user1@gmail.com": "userpass",
+	"user2@gmail.com": "userpass",
 }
 
 func NewAuthController(config config.EnvVars) *AuthController {
 	return &AuthController{
-		jwt: []byte(config.JWT_KEY),
+		jwt:   []byte(config.JWT_KEY),
+		users: users,
 	}
 }
